<resources>
    <string name="app_name">UPSC QUIZ</string>
    <string name="start_btn">START QUIZ</string>
    <string name="performance_btn">YOUR PERFORMANCE</string>
    <string name="sets">SETS</string>
    <string name="categories">Categories</string>
    <string name="set1">SET1</string>
    <string name="share">Share</string>
    <string name="next">Next</string>
    <string name="button">Button</string>
    <string name="title">Title</string>
    <string name="score">SCORE</string>
    <string name="done">Done</string>
    <string name="loading">Loading...</string>
    <string name="bookmarks">BOOKMARKS</string>
</resources>